@@ -1,5 +1,6 @@
 Added glasses.
 Added new eyes.
+Fixed a Monarch Achievement bug; it can now be achieved with the Royal Dress.
 
 *****
 
